# System-programming

./: .gitignore
lec_2/: hello.c
lec_3/linking/link/: main.c  swap.c
lec_4/ex1_minimal_make/: hello.c  makefile
lec_4/ex2_multi_file_project_make/: makefile
lec_4/ex3_phony_targets/: makefile
lec_4/ex4_multiple_makefiles/: makefile
lec_4/ex4_multiple_makefiles/src/: prog.c
lec_4/ex5_makefile_macro/: makefile
lec_4/ex5_makefile_macro/mod/: mymod.c  mymod.h
lec_5/ex_autoconf/: Makefile.am  configure.ac
lec_5/ex_autoconf/src/: prog.c
lec_5/ex_cmake/: CMakeLists.txt
linux-system-monitor/include/: linux_parser.h  system.h
linux-system-monitor/src/: main.cpp  system.cpp
session_6/: hello.c
session_7/: input_args.c  open_file.c  variadic_function.c
session_7/femto_unix_utils/: CMakeLists.txt  hello.txt  readme.md
session_7/femto_unix_utils/src/: mycopy.c  myecho.c  mymove.c  mypwd.c
session_8/: executer.c  first_fork.c  fork_exec_in_child.c  print_pid_ppid.c  second_fork.c  third_fork.c
session_8/simple_shell/: simple-shell.c
session_9/: print_env_vars.c
session_9/simple_shell/: simple-shell.c
session_9/simple_shell_extension/: CMakeLists.txt  readme.md  simple-shell-ext.c
session_9/simple_shell_making_zombies/: simple-shell-parent-no-wait.c
storage_management/: myfdisk.c
